[package]
name = "voxel-chat"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
version = "0.1.0"

[dependencies]
bevy = { version = "0.9" }
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
bevy_rapier3d = { version = "0.19", features = ["debug-render"] }
bevy_vox_mesh = { git = "https://github.com/AThilenius/bevy_vox_mesh.git" }
rmp-serde = "1.1.1"
ron = "0.8"
serde = "1.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
